Fix bio alignment

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,6 +17,10 @@
     @apply mb-4;
 }
 
+.text-center-last {
+    text-align-last: center;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
